# hvx

./: .gitignore  .local.vimrc  LICENSE  README.md  hvx.cabal  install.sh
examples/: cvxtest.m  demo.hs  subgrad.hs
src/: HVX.hs
src/HVX/: Primitives.hs
src/HVX/Internal/: Constraints.hs  DCP.hs  Matrix.hs  Primitives.hs  Solvers.hs  SymbolicSubgrad.hs  TestUtil.hs  Util.hs
test/: DcpTests.hs
test/DcpTests/: ConvexNondecConcaveDisallowed.hs  ConvexNondecConvexNondecAllowed.hs  NoAffineNonmonConcaveNondec.hs  NoAffineNonmonConvexNondec.hs  NoConcaveLeq.hs  NoConvexGeq.hs  NoConvexNondecConcave.hs  OkAffineAffine.hs  OkConcaveNondecConcave.hs  OkConstraints.hs  OkConvexNondecConvex.hs  OkXAffine.hs
test/HVX/: DCPSpec.hs  SymbolicSubgradSpec.hs
test/HVX/BlackBoxTests/: HuberTestSpec.hs  ManyvarTestSpec.hs  huber_test.m  manyvar_test.m
