name               : hvx
version            : 0.1.0.0
synopsis           : Solves convex optimization problems with subgradient methods.
license-file       : LICENSE
author             : Chris Copeland and Michael Haggblade
category           : Math
build-type         : Simple
cabal-version      : >=1.20

library
  exposed-modules  : HVX
                   , HVX.Primitives
                   , HVX.Internal.Constraints
                   , HVX.Internal.DCP
                   , HVX.Internal.Matrix
                   , HVX.Internal.Primitives
                   , HVX.Internal.Solvers
                   , HVX.Internal.SymbolicSubgrad
                   , HVX.Internal.TestUtil
                   , HVX.Internal.Util
  other-extensions : GADTs, TypeFamilies, FlexibleContexts
  build-depends    : base < 5
                   , QuickCheck > 2.5
                   , hmatrix
  hs-source-dirs   : src
  default-language : Haskell2010
  ghc-options      : -Wall

test-suite haskell-tests
  type             : exitcode-stdio-1.0
  build-depends    : base < 5
                   , QuickCheck > 2.5
                   , hspec
                   , hmatrix
                   , hvx
  hs-source-dirs   : test
  main-is          : Spec.hs
  default-language : Haskell2010
  ghc-options      : -Wall

test-suite shell-tests
  type             : exitcode-stdio-1.0
  build-depends    : base < 5
                   , directory
                   , process
                   , filepath
  hs-source-dirs   : test
  main-is          : DcpTests.hs
  default-language : Haskell2010
  ghc-options      : -Wall
