name               : hvx
version            : 0.3.0.0
synopsis           : Solves convex optimization problems with subgradient methods.
license-file       : LICENSE
author             : Chris Copeland and Michael Haggblade
category           : Math
build-type         : Simple
cabal-version      : >=1.20
tested-with        : GHC == 8.2.1

library
  exposed-modules  : HVX
                   , HVX.Primitives
                   , HVX.Internal.Constraints
                   , HVX.Internal.DCP
                   , HVX.Internal.Matrix
                   , HVX.Internal.Primitives
                   , HVX.Internal.Solvers
                   , HVX.Internal.SymbolicSubgrad
                   , HVX.Internal.TestUtil
                   , HVX.Internal.Util
  other-extensions : CPP
                     DataKinds
                     FlexibleContexts
                     GADTs
                     KindSignatures
                     TypeFamilies
  -- closed type families need ghc>=7.8 which has base==4.7
  build-depends    : base < 5 && >= 4.7
                   , QuickCheck > 2.5
                   , hmatrix >= 0.18.0.1 && < 0.19
                   , deepseq >= 1.4.3.0 && < 1.5
  hs-source-dirs   : src
  default-language : Haskell2010
  ghc-options      : -Wall

test-suite haskell-tests
  type             : exitcode-stdio-1.0
  build-depends    : base < 5
                   , QuickCheck > 2.5
                   , hspec
                   , hmatrix >= 0.18.0.1 && < 0.19
                   , deepseq >= 1.4.3.0 && < 1.5
  hs-source-dirs   : test, src
  main-is          : Spec.hs
  default-language : Haskell2010
  ghc-options      : -Wall

  -- tests/SymbolicSubgradSpec.hs tests gradients of
  -- functions that do not follow the hvx
  -- rules. This cpp definition removes a constraint
  -- that would cause a compile failure.
  cpp-options      : -DDISABLE_EXPR_CXT

test-suite shell-tests
  type             : exitcode-stdio-1.0
  build-depends    : base < 5
                   , directory
                   , process
                   , filepath
                   , deepseq >= 1.4.3.0 && < 1.5
  hs-source-dirs   : test
  main-is          : DcpTests.hs
  default-language : Haskell2010
  ghc-options      : -Wall

executable demo
  hs-source-dirs   : examples
  main-is          : demo.hs
  build-depends    : base < 5 && >= 4.7
                   , QuickCheck > 2.5
                   , hmatrix >= 0.18.0.1 && < 0.19
                   , hvx
                   , deepseq >= 1.4.3.0 && < 1.5
  default-language : Haskell2010
  ghc-options      : -Wall

executable subgrad
  hs-source-dirs   : examples
  main-is          : subgrad.hs
  build-depends    : base < 5 && >= 4.7
                   , QuickCheck > 2.5
                   , hmatrix >= 0.18.0.1 && < 0.19
                   , hvx
                   , deepseq >= 1.4.3.0 && < 1.5
  default-language : Haskell2010
  ghc-options      : -Wall
